tests/purs/failing/NatMul.out
Error found:
in module [33mMain[0m
at tests/purs/failing/NatMul.purs:14:6 - 14:7 (line 14, column 6 - line 14, column 7)

  No type class instance was found for
  [33m                 [0m
  [33m  Prim.Nat.Mul 5 [0m
  [33m               t1[0m
  [33m               17[0m
  [33m                 [0m

while checking that type [33mforall (n :: Nat). Mul 5 n 17 => Proxy @Nat n[0m
  is at least as general as type [33mProxy @t0 t1[0m
while checking that expression [33md[0m
  has type [33mProxy @t0 t1[0m
in value declaration [33md'[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

